feat: dreame auto mode
